fix: top spacing

--- a/services/web-app/components/content-wrapper/content-wrapper.module.scss
+++ b/services/web-app/components/content-wrapper/content-wrapper.module.scss
@@ -19,7 +19,8 @@
 //remove default spacing on first elements
 .content-wrapper > *:first-child,
 .content-wrapper > *:first-child > *:first-child,
-.content-wrapper > *:first-child > *:first-child > *:first-child {
+.content-wrapper > *:first-child > *:first-child > *:first-child,
+.content-wrapper > *:first-child > *:first-child > *:first-child > *:first-child {
   padding-top: 0;
   margin-top: 0;
 }
